--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
   <!-- Congrats screen -->
   <section id="congrats-screen" class="screen">
     <canvas id="fireworks-canvas" aria-hidden="true"></canvas>
-    <h2>yayyyyyyyy!</h2>
-    <p>u just said yes to being mine again. best decision ever trust💕</p>
+    <h2>YAAAAAAAAAAAAAAAAAAAY!</h2>
+    <p>u just said yes to being mine again. best decision ever trust. je t'aime 💕</p>
     <div class="hearts">♥ ♥ ♥</div>
   </section>
 
