--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     body::after {
       content: '♥';
       position: fixed;
-      font-size: 2rem;
-      opacity: 0.15;
+      font-size: 5rem;
+      opacity: 0.18;
       animation: float 6s ease-in-out infinite;
       pointer-events: none;
     }
@@ -47,7 +47,7 @@
     }
     @keyframes float {
       0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-20px); }
+      50% { transform: translateY(-35px); }
     }
 
     .screen {
@@ -141,9 +141,12 @@
       background: linear-gradient(135deg, #a29bfe, #6c5ce7);
       color: white;
       box-shadow: 0 4px 15px rgba(108, 92, 231, 0.3);
-      position: fixed;
       transition: left 0.2s ease-out, top 0.2s ease-out;
       z-index: 10;
+    }
+
+    .btn-no.fixed-position {
+      position: fixed;
     }
 
     .btn-no:hover {
@@ -158,10 +161,11 @@
     }
 
     #fireworks-canvas {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100vw;
+      height: 100vh;
       pointer-events: none;
       z-index: 0;
     }
@@ -170,27 +174,35 @@
     .congrats-screen p,
     .congrats-screen .hearts {
       position: relative;
-      z-index: 1;
+      z-index: 10;
+      background: rgba(255, 248, 245, 0.98);
+      padding: 0.25rem 0.5rem;
+      border-radius: 8px;
+      isolation: isolate;
+    }
+
+    .congrats-screen .hearts {
+      padding: 0.4rem 0.6rem;
     }
 
     .congrats-screen h2 {
       font-family: 'Playfair Display', serif;
-      font-size: clamp(2rem, 6vw, 3rem);
+      font-size: clamp(3rem, 12vw, 5.5rem);
       font-weight: 700;
       color: #5d2a42;
       margin-bottom: 1rem;
     }
 
     .congrats-screen p {
-      font-size: 1.2rem;
+      font-size: clamp(1.35rem, 3.5vw, 1.85rem);
       color: #6b3a4d;
       margin-bottom: 1.5rem;
-      max-width: 400px;
+      max-width: 520px;
     }
 
     .hearts {
-      font-size: 3rem;
-      letter-spacing: 0.5rem;
+      font-size: 5.5rem;
+      letter-spacing: 0.8rem;
       margin-top: 1rem;
       animation: pulse 1s ease-in-out infinite;
     }
@@ -204,14 +216,14 @@
 <body>
   <!-- Ask screen -->
   <section id="ask-screen" class="screen active">
-    <h1 id="valentine-text">will you be my valentine? pretty please? i luv u💕</h1>
+    <h1 id="valentine-text">hi jeremy (aka jay, aka my love), will you be my valentine? pretty please? i luv u 💕</h1>
     <div class="photo-placeholder" id="photo-placeholder">
       <img id="valentine-photo" src="pengu.jpg" alt="Pengu">
     </div>
     <div class="buttons-wrap">
       <button type="button" class="btn btn-yes" id="btn-yes">Yes!</button>
+      <button type="button" class="btn btn-no" id="btn-no">No</button>
     </div>
-    <button type="button" class="btn btn-no" id="btn-no">No</button>
   </section>
 
   <!-- Congrats screen -->
@@ -246,7 +258,7 @@
     ];
 
     const noHoverMessages = [
-      'will you be my valentine? pretty please? i luv u💕',
+      'will you be my valentine? pretty please? i luv u 💕',
       'are you sure?',
       'breaking my heart here…',
       'wrong button bestie',
@@ -320,11 +332,13 @@
 
     function resizeCanvas() {
       const dpr = window.devicePixelRatio || 1;
-      const rect = canvas.getBoundingClientRect();
-      canvas.width = rect.width * dpr;
-      canvas.height = rect.height * dpr;
-      canvas.style.width = rect.width + 'px';
-      canvas.style.height = rect.height + 'px';
+      const w = window.innerWidth;
+      const h = window.innerHeight;
+      canvas.width = w * dpr;
+      canvas.height = h * dpr;
+      canvas.style.width = w + 'px';
+      canvas.style.height = h + 'px';
+      ctx.setTransform(1, 0, 0, 1, 0, 0);
       ctx.scale(dpr, dpr);
     }
 
@@ -336,7 +350,7 @@
       let lastRocket = 0;
 
       function createRocket(w, h) {
-        const x = Math.random() * w * 0.6 + w * 0.2;
+        const x = 30 + Math.random() * (w - 60);
         rockets.push({
           x, y: h + 10,
           vx: (Math.random() - 0.5) * 0.5,
@@ -347,10 +361,10 @@
       }
 
       function explode(rocket) {
-        const count = 40 + Math.floor(Math.random() * 30);
+        const count = 55 + Math.floor(Math.random() * 35);
         for (let i = 0; i < count; i++) {
           const angle = (Math.PI * 2 * i) / count + Math.random();
-          const speed = 2 + Math.random() * 4;
+          const speed = 3 + Math.random() * 5;
           particles.push({
             x: rocket.x, y: rocket.y,
             vx: Math.cos(angle) * speed,
@@ -362,12 +376,22 @@
         }
       }
 
+      const centerX = window.innerWidth / 2;
+      const centerY = window.innerHeight / 2;
+      const centerZoneW = window.innerWidth * 0.32;
+      const centerZoneH = window.innerHeight * 0.2;
+
+      function inCenterZone(x, y) {
+        return Math.abs(x - centerX) < centerZoneW / 2 && Math.abs(y - centerY) < centerZoneH / 2;
+      }
+
       function tick() {
-        const w = canvas.width / (window.devicePixelRatio || 1);
-        const h = canvas.height / (window.devicePixelRatio || 1);
+        const w = window.innerWidth;
+        const h = window.innerHeight;
         ctx.clearRect(0, 0, w, h);
 
-        if (Date.now() - lastRocket > 400) {
+        if (Date.now() - lastRocket > 120) {
+          createRocket(w, h);
           createRocket(w, h);
           lastRocket = Date.now();
         }
@@ -379,12 +403,15 @@
           r.vy += 0.15;
           r.trail.push({ x: r.x, y: r.y });
           if (r.trail.length > 12) r.trail.shift();
-          ctx.strokeStyle = r.color;
-          ctx.lineWidth = 2;
-          ctx.beginPath();
-          ctx.moveTo(r.trail[0].x, r.trail[0].y);
-          r.trail.forEach(p => ctx.lineTo(p.x, p.y));
-          ctx.stroke();
+          const trailInCenter = r.trail.some(pt => inCenterZone(pt.x, pt.y));
+          if (!trailInCenter) {
+            ctx.strokeStyle = r.color;
+            ctx.lineWidth = 5;
+            ctx.beginPath();
+            ctx.moveTo(r.trail[0].x, r.trail[0].y);
+            r.trail.forEach(pt => ctx.lineTo(pt.x, pt.y));
+            ctx.stroke();
+          }
           if (r.vy >= 0) {
             explode(r);
             rockets.splice(i, 1);
@@ -398,10 +425,11 @@
           p.vy += 0.08;
           p.life -= p.decay;
           if (p.life <= 0) { particles.splice(i, 1); continue; }
+          if (inCenterZone(p.x, p.y)) continue;
           ctx.globalAlpha = p.life;
           ctx.fillStyle = p.color;
           ctx.beginPath();
-          ctx.arc(p.x, p.y, 2, 0, Math.PI * 2);
+          ctx.arc(p.x, p.y, 5, 0, Math.PI * 2);
           ctx.fill();
           ctx.globalAlpha = 1;
         }
@@ -492,6 +520,7 @@
       if (nearNo) {
         runAwayCooldown = true;
         setTimeout(() => { runAwayCooldown = false; }, 300);
+        btn.classList.add('fixed-position');
         const { left, top } = getRandomPosition();
         btn.style.left = left + 'px';
         btn.style.top = top + 'px';
@@ -500,13 +529,6 @@
     };
 
     document.addEventListener('mousemove', runAway);
-    // Start No button next to the Yes button on first load
-    requestAnimationFrame(() => {
-      const yesRect = btnYes.getBoundingClientRect();
-      btnNo.style.left = (yesRect.right + 16) + 'px';
-      btnNo.style.top = (yesRect.top + (yesRect.height - btnNo.offsetHeight) / 2) + 'px';
-      btnNo.style.transform = 'none';
-    });
   </script>
 </body>
 </html>
