--- a/index.html
+++ b/index.html
@@ -104,10 +104,17 @@
       transition: opacity 0.25s ease;
     }
 
+    .pick-one {
+      font-size: 1rem;
+      color: #8b5a6b;
+      margin-top: 1.5rem;
+      margin-bottom: 0.5rem;
+    }
+
     .buttons-wrap {
       display: flex;
       gap: 1rem;
-      margin-top: 2rem;
+      margin-top: 0.5rem;
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
@@ -136,13 +143,15 @@
       box-shadow: 0 6px 20px rgba(232, 67, 147, 0.5);
     }
 
-
     .btn-no {
       background: linear-gradient(135deg, #a29bfe, #6c5ce7);
       color: white;
       box-shadow: 0 4px 15px rgba(108, 92, 231, 0.3);
       transition: left 0.2s ease-out, top 0.2s ease-out;
       z-index: 10;
+      padding: 0.95rem 2.2rem;
+      font-size: 1.2rem;
+      animation: gentle-glow 2s ease-in-out infinite;
     }
 
     .btn-no.fixed-position {
@@ -151,6 +160,11 @@
 
     .btn-no:hover {
       box-shadow: 0 6px 20px rgba(108, 92, 231, 0.4);
+    }
+
+    @keyframes gentle-glow {
+      0%, 100% { box-shadow: 0 4px 15px rgba(108, 92, 231, 0.3); }
+      50% { box-shadow: 0 5px 22px rgba(108, 92, 231, 0.45); }
     }
 
     /* ========== CONGRATS SCREEN ========== */
@@ -228,9 +242,10 @@
     <div class="photo-placeholder" id="photo-placeholder">
       <img id="valentine-photo" src="pengu.jpg" alt="Pengu">
     </div>
+    <p class="pick-one">pick one 💕</p>
     <div class="buttons-wrap">
-      <button type="button" class="btn btn-yes" id="btn-yes">Yes!</button>
       <button type="button" class="btn btn-no" id="btn-no">No</button>
+      <button type="button" class="btn btn-yes" id="btn-yes">Yes!</button>
     </div>
   </section>
 
